@@ -3,6 +3,7 @@ Revision history for Perl extension Apache2::Filter::Minifier::JavaScript.
 {{$NEXT}}
     - Switch to Dist::Zilla for release management
     - POD cleanups
+    - Namespace cleaned
 
 1.06    Fri Nov  7 17:05 PST 2014
     - Update tests to accommodate Apache-2.4.x series
